summative.moria.Moria.scala.error
Compilation error:
Moria:14: error: Unit does not take parameters
    forward()()
             ^