summative.moria.Moria.scala.code
left();left()

while(!isFacingWall()){
  
  
  while ( !isOverBaggle() && !isFacingWall()){
		forward()
  }
  
  if(isOverBaggle()){
    pickupBaggle()
    while(!isOverBaggle())
    	backward()
    forward()()
    dropBaggle()
    forward()


  }
  
  
}

//forward();backward();right();forward()